panoiq_stackstorm/ranger/ranger-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ranger-admin
  namespace: development
spec:
  ports:
    - name: http
      port: 6080
      protocol: TCP
      targetPort: 6080
  selector:
    app: ranger-admin-server
